--- a/lampy.yml
+++ b/lampy.yml
@@ -51,7 +51,6 @@ Resources:
       Tags:
         - Key: Name
           Value: public-rt
-
   RouteToInternet:
     Type: 'AWS::EC2::Route'
     DependsOn: GatewayToInternet
@@ -67,6 +66,60 @@ Resources:
       Tags:
         - Key: Name
           Value: private-rt
+
+  PublicWSNACL:
+    Type: 'AWS::EC2::NetworkAcl'
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: public-ws-nacl
+  PublicInboundRule1:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      NetworkAclId: !Ref PublicWSNACL
+      RuleNumber: 100
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 80
+        To: 80
+  PublicInboundRule2:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      NetworkAclId: !Ref PublicWSNACL
+      RuleNumber: 110
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 10.0.0.0/16 # VPC CIDR
+      PortRange:
+        From: 32768
+        To: 65535
+  PublicOutboundRule1:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      NetworkAclId: !Ref PublicWSNACL
+      Egress: true
+      RuleNumber: 100
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 10.0.0.0/16 # VPC CIDR
+      PortRange:
+        From: 3306
+        To: 3306
+  PublicOutboundRule2:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      NetworkAclId: !Ref PublicWSNACL
+      Egress: true
+      RuleNumber: 110
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 32768
+        To: 65535
 
   wssg:
     Type: 'AWS::EC2::SecurityGroup'
