--- a/lampy.yml
+++ b/lampy.yml
@@ -121,6 +121,37 @@ Resources:
         From: 32768
         To: 65535
 
+  PrivateDBNACL:
+    Type: 'AWS::EC2::NetworkAcl'
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: private-db-nacl
+  PrivateInboundRule:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      NetworkAclId: !Ref PrivateDBNACL
+      RuleNumber: 100
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 10.0.0.0/16 # VPC CIDR
+      PortRange:
+        From: 3306
+        To: 3306
+  PrivateOutboundRule:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      NetworkAclId: !Ref PrivateDBNACL
+      Egress: true
+      RuleNumber: 100
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 10.0.0.0/16 # VPC CIDR
+      PortRange:
+        From: 32768
+        To: 65535
+
   wssg:
     Type: 'AWS::EC2::SecurityGroup'
     Properties:
